[package]
name = "bevy_game"
version = "0.1.0"
publish = false
authors = ["SPC"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

# [profile.dev]
# opt-level = 1

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy = { version = "0.12.1" }
bevy_asset_loader = { version = "0.18" }
rand = { version = "0.8.3" }
webbrowser = { version = "0.8", features = ["hardened"] }
hexx = "0.12.0"
leafwing-input-manager = "0.11.2"
bevy_tweening = { git = "https://github.com/SecretPocketCat/bevy_tweening" }
paste = "1.0.14"
bevy_mod_picking = "0.17.0"
bevy_eventlistener = "0.6.1"
